src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Email_Approval_Process_Submitter__c</fullName>
        <label>Email approval process submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Azienda__c</fullName>
        <label>Email Azienda</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_DQ__c</fullName>
        <formula>IF (OUT_EMAIL_CODE1__c =0 &amp;&amp; OUT_EMAIL_CODE2__c =0, IMAGE(&apos;/resource/pallino_bianco&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Email formalmente valido ed esistente&quot;,
IF (OUT_EMAIL_CODE1__c =0 &amp;&amp; OUT_EMAIL_CODE2__c =1, IMAGE(&apos;/resource/pallino_bianco&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Email formalmente valido ma non verificabile&quot;,
IF (OUT_EMAIL_CODE1__c =0 &amp;&amp; OUT_EMAIL_CODE2__c =2, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Email standardizzato,formalmente valido ma non verificabile&quot;,
IF (OUT_EMAIL_CODE1__c =0 &amp;&amp; OUT_EMAIL_CODE2__c =3, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Email standardizzato,formalmente valido ed esistente&quot;,
IF (OUT_EMAIL_CODE1__c =1 &amp;&amp; OUT_EMAIL_CODE2__c =1, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Email presente con Warning (Spamtrap, DoNotMail, Abuse, Unkown)&quot;,
IF (OUT_EMAIL_CODE1__c =2 &amp;&amp; OUT_EMAIL_CODE2__c =1, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Email non valido&quot;,
IF (OUT_EMAIL_CODE1__c =2 &amp;&amp; OUT_EMAIL_CODE2__c =2, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Email non presente&quot;,&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email DQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Ecommerce__c</fullName>
        <label>Email Digital</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Location_MC__c</fullName>
        <formula>Location__r.Email_Test_MC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Location MC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ente_di_emissione_passaporto__c</fullName>
        <label>Ente di emissione passaporto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eta__c</fullName>
        <formula>IF( 

MONTH(TODAY())&gt;MONTH(PersonBirthdate), 

YEAR(TODAY())-YEAR(PersonBirthdate), 

IF(AND(MONTH(TODAY()) = MONTH(PersonBirthdate), DAY(TODAY()) &gt;= DAY(PersonBirthdate)), 

YEAR(TODAY())-YEAR(PersonBirthdate), 

(YEAR(TODAY())-YEAR(PersonBirthdate))-1) 

)</formula>
        <label>Età</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_client__c</fullName>
        <formula>IF ( YEAR(Data_Primo_Acquisto__c) &lt;&gt; YEAR(Today()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fascia_Di_Eta__c</fullName>
        <label>Fascia Di Età</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0018</fullName>
                    <label>00 - 18</label>
                </value>
                <value>
                    <fullName>1830</fullName>
                    <label>18 - 30</label>
                </value>
                <value>
                    <fullName>3040</fullName>
                    <label>30 - 40</label>
                </value>
                <value>
                    <fullName>4050</fullName>
                    <label>40 - 50</label>
                </value>
                <value>
                    <fullName>5060</fullName>
                    <label>50 - 60</label>
                </value>
                <value>
                    <fullName>6070</fullName>
                    <label>60 - 70</label>
                </value>
                <value>
                    <fullName>7080</fullName>
                    <label>70 - 80</label>
                </value>
                <value>
                    <fullName>8099</fullName>
                    <label>80 - 99</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Firma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_ID_Location__c</fullName>
        <label>First ID Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Location_Name__c</fullName>
        <label>First Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Location__c</fullName>
        <label>First Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Debole__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag Debole</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Forte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag Forte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequenza_di_contatto__c</fullName>
        <label>Frequenza di contatto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Often, when you have relevant updates for me</fullName>
                </value>
                <value>
                    <fullName>Once a month</fullName>
                </value>
                <value>
                    <fullName>Once every three months</fullName>
                </value>
                <value>
                    <fullName>Once a Year</fullName>
                </value>
                <value>
                    <fullName>Contact me only for very important news</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                    <label>Never, I don&apos;t want to receive updates</label>
                </value>
                <value>
                    <fullName>Only for catalogue sending</fullName>
                </value>
                <value>
                    <fullName>Every now and then, if you have very relevant news</fullName>
                    <isActive>false</isActive>
                    <label>Every now and then, if you have very relevant news</label>
                </value>
                <value>
                    <fullName>Rarely, I don’t want to receive updates</fullName>
                    <isActive>false</isActive>
                    <label>Rarely, I don’t want to receive updates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Customer__c</fullName>
        <formula>IF (  OR(CONTAINS(FirstName, &quot;generic&quot;), CONTAINS(LastName, &quot;Generic&quot;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ho_allegato_copia_firmata_di_richiesta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ho allegato copia firmata di richiesta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Food&amp;Beverage</fullName>
                </value>
                <value>
                    <fullName>Theatre/Opera</fullName>
                </value>
                <value>
                    <fullName>Cinema</fullName>
                </value>
                <value>
                    <fullName>Literature/Culture</fullName>
                </value>
                <value>
                    <fullName>Art/Design</fullName>
                </value>
                <value>
                    <fullName>Wellness&amp;Spa</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Sailing</fullName>
                </value>
                <value>
                    <fullName>Other Sport</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Music/Instruments</fullName>
                </value>
                <value>
                    <fullName>Casino games</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Associate_Registrazione__c</fullName>
        <formula>Associate_di_registrazione__r.Id_Associate_Micros__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Associate Registrazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Associate__c</fullName>
        <label>Id Associate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_DW__c</fullName>
        <externalId>true</externalId>
        <label>Id cliente E-commerce</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_Cliente_Relate__c</fullName>
        <label>Id cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_Salesforce__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Cliente Salesforce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente__c</fullName>
        <externalId>true</externalId>
        <label>Id cliente AS400</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_Cliente_xStore__c</fullName>
        <externalId>true</externalId>
        <label>Id cliente xStore</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_Location__c</fullName>
        <label>Id Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_BRL__c</fullName>
        <label>Importo Acquisti E-commerce BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_CAD__c</fullName>
        <label>Importo Acquisti E-commerce CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_CHF__c</fullName>
        <label>Importo Acquisti E-commerce CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_CNY__c</fullName>
        <label>Importo Acquisti E-commerce CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_EUR__c</fullName>
        <label>Importo Acquisti E-commerce EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_FRL__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Importo_Acquisti_E_commerce_BRL__c, 
&quot;CAD&quot;, Importo_Acquisti_E_commerce_CAD__c, 
&quot;CHF&quot;, Importo_Acquisti_E_commerce_CHF__c, 
&quot;CNY&quot;, Importo_Acquisti_E_commerce_CNY__c, 
&quot;EUR&quot;, Importo_Acquisti_E_commerce_EUR__c, 
&quot;GBP&quot;, Importo_Acquisti_E_commerce_GBP__c, 
&quot;HKD&quot;, Importo_Acquisti_E_commerce_HKD__c, 
&quot;JPY&quot;, Importo_Acquisti_E_commerce_JPY__c, 
&quot;USD&quot;, Importo_Acquisti_E_commerce_USD__c, 
&quot;MOP&quot;, Importo_Acquisti_E_commerce_MOP__c, 
Importo_Acquisti_E_commerce__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Acquisti E-commerce</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_GBP__c</fullName>
        <label>Importo Acquisti E-commerce GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_HKD__c</fullName>
        <label>Importo Acquisti E-commerce HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_JPY__c</fullName>
        <label>Importo Acquisti E-commerce JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_MOP__c</fullName>
        <label>Importo Acquisti E-commerce MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce_USD__c</fullName>
        <label>Importo Acquisti E-commerce USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_E_commerce__c</fullName>
        <label>Importo Acquisti E-commerce (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_Totale__c</fullName>
        <formula>Importo_Acquisti_Valuta_Boutique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total purchase amount (incl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_Ultima_Stagione_FRL__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Importo_acquisti_ultima_stagione_BRL__c, 
&quot;CAD&quot;, Importo_acquisti_ultima_stagione_CAD__c, 
&quot;CHF&quot;, Importo_acquisti_ultima_stagione_CHF__c, 
&quot;CNY&quot;, Importo_acquisti_ultima_stagione_CNY__c, 
&quot;EUR&quot;, Importo_acquisti_ultima_stagione_EUR__c, 
&quot;GBP&quot;, Importo_acquisti_ultima_stagione_GBP__c, 
&quot;HKD&quot;, Importo_acquisti_ultima_stagione_HKD__c, 
&quot;JPY&quot;, Importo_acquisti_ultima_stagione_JPY__c, 
&quot;USD&quot;, Importo_acquisti_ultima_stagione_USD__c, 
&quot;MOP&quot;, Importo_acquisti_ultima_stagione_MOP__c,
Importo_acquisti_ultima_stagione__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Acquisti Ultima Stagione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_Ultima_Stagione_ecoFRL__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Importo_acquisti_ultima_stg_E_comm_BRL__c, 
&quot;CAD&quot;, Importo_acquisti_ultima_stg_E_comm_CAD__c, 
&quot;CHF&quot;, Importo_acquisti_ultima_stg_E_comm_CHF__c, 
&quot;CNY&quot;, Importo_acquisti_ultima_stg_E_comm_CNY__c, 
&quot;EUR&quot;, Importo_acquisti_ultima_stg_E_comm_EUR__c, 
&quot;GBP&quot;, Importo_acquisti_ultima_stg_E_comm_GBP__c, 
&quot;HKD&quot;, Importo_acquisti_ultima_stg_E_comm_HKD__c, 
&quot;JPY&quot;, Importo_acquisti_ultima_stg_E_comm_JPY__c, 
&quot;USD&quot;, Importo_acquisti_ultima_stg_E_comm_USD__c, 
&quot;MOP&quot;, Importo_acquisti_ultima_stg_E_comm_MOP__c,
Importo_acquisti_ultima_stagione_E_comm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Acquisti Ultima Stagione Ecom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_Valuta_Boutique__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Importo_Totale_Acquisti_BRL__c, 
&quot;CAD&quot;, Importo_Totale_Acquisti_CAD__c, 
&quot;CHF&quot;, Importo_Totale_Acquisti_CHF__c, 
&quot;CNY&quot;, Importo_Totale_Acquisti_CNY__c, 
&quot;EUR&quot;, Importo_Totale_Acquisti_EUR__c, 
&quot;GBP&quot;, Importo_Totale_Acquisti_GBP__c, 
&quot;HKD&quot;, Importo_Totale_Acquisti_HKD__c, 
&quot;JPY&quot;, Importo_Totale_Acquisti_JPY__c, 
&quot;USD&quot;, Importo_Totale_Acquisti_USD__c,
&quot;MOP&quot;, Importo_Totale_Acquisti_MOP__c,
&quot;AUD&quot;, Importo_Totale_Acquisti_AUD__c,
&quot;DKK&quot;, Importo_Totale_Acquisti_DKK__c,
&quot;RUB&quot;, Importo_Totale_Acquisti_RUB__c,
&quot;KRW&quot;, Importo_Totale_Acquisti_KRW__c,
&quot;AED&quot;, Importo_Totale_Acquisti_AED__c,
&quot;PLN&quot;, Importo_Totale_Acquisti_PLN__c,
&quot;QAR&quot;, Importo_Totale_Acquisti_QAR__c,
&quot;SGD&quot;, Importo_Totale_Acquisti_SGD__c,
&quot;SAR&quot;, Importo_Totale_Acquisti_SAR__c,
Importo_Totale_Acquisti__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Acquisti</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_AUD__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift  AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_BRL__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_CAD__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_CHF__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_CNY__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_DKK__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift DKK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_EUR__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_GBP__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_HKD__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_JPY__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_RUB__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift RUB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift_USD__c</fullName>
        <description>Importo Acquisti netto resi e netto gift</description>
        <label>Importo Acquisti netto resi e gift USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_netto_resi_e_gift__c</fullName>
        <label>Importo Acquisti netto resi e gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_no_resi_e_gift_valuta__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;,  Importo_Acquisti_netto_resi_e_gift_BRL__c, 
&quot;CAD&quot;,  Importo_Acquisti_netto_resi_e_gift_CAD__c, 
&quot;CHF&quot;,  Importo_Acquisti_netto_resi_e_gift_CHF__c, 
&quot;CNY&quot;,  Importo_Acquisti_netto_resi_e_gift_CNY__c, 
&quot;EUR&quot;,  Importo_Acquisti_netto_resi_e_gift_EUR__c, 
&quot;GBP&quot;,  Importo_Acquisti_netto_resi_e_gift_GBP__c, 
&quot;HKD&quot;,  Importo_Acquisti_netto_resi_e_gift_HKD__c, 
&quot;JPY&quot;,  Importo_Acquisti_netto_resi_e_gift_JPY__c, 
&quot;USD&quot;,  Importo_Acquisti_netto_resi_e_gift_USD__c,
Importo_Acquisti_netto_resi_e_gift__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Acquisti no resi e gift valuta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_ultimi_6_12_mesi__c</fullName>
        <label>Importo Acquisti ultimi 6-12 mesi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Acquisti_ultimi_6_mesi__c</fullName>
        <label>Importo Acquisti ultimi 6 mesi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Medio_per_Scontrino__c</fullName>
        <formula>IF (  (N_Scontrini__c-  N_Scontrini_con_Resi__c) = 0 , 0 , 
(Importo_Totale_Acquisti__c -Importo_totale_Resi__c) /  (N_Scontrini__c-  N_Scontrini_con_Resi__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Medio per Scontrino</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_AED__c</fullName>
        <label>Importo Acquisti AED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_AUD__c</fullName>
        <label>Importo Acquisti AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_Anno_Corrente__c</fullName>
        <label>Importo Totale Acquisti Anno Corrente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_Anno_Precedente__c</fullName>
        <label>Importo Totale Acquisti Anno Precedente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_BPS__c</fullName>
        <label>Importo Totale Acquisti BPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_BRL__c</fullName>
        <label>Importo Acquisti BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_CAD__c</fullName>
        <label>Importo Acquisti CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_CHF__c</fullName>
        <label>Importo Acquisti CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_CNY__c</fullName>
        <label>Importo Acquisti CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_DKK__c</fullName>
        <label>Importo Acquisti DKK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_DOS1__c</fullName>
        <label>Importo Totale Acquisti DOS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_DOS__c</fullName>
        <label>Importo Tot Acquisti DOS ultimi 24 mesi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_EUR__c</fullName>
        <label>Importo Acquisti EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_Ecommerce__c</fullName>
        <label>Importo Totale Acquisti Ecommerce</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_GBP__c</fullName>
        <label>Importo Acquisti GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_HKD__c</fullName>
        <label>Importo Acquisti HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_JPY__c</fullName>
        <label>Importo Acquisti JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_KRW__c</fullName>
        <label>Importo Acquisti KRW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_MOP__c</fullName>
        <label>Importo Acquisti MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_PLN__c</fullName>
        <label>Importo Acquisti PLN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_QAR__c</fullName>
        <label>Importo Acquisti QAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_RUB__c</fullName>
        <label>Importo Acquisti RUB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_SAR__c</fullName>
        <label>Importo Acquisti SAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_SGD__c</fullName>
        <label>Importo Acquisti SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti_USD__c</fullName>
        <label>Importo Acquisti USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Totale_Acquisti__c</fullName>
        <label>Importo acquisti</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_BRL__c</fullName>
        <label>Importo acquisti boutique BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_CAD__c</fullName>
        <label>Importo acquisti boutique CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_CHF__c</fullName>
        <label>Importo acquisti boutique CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_CNY__c</fullName>
        <label>Importo acquisti boutique CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_EUR__c</fullName>
        <label>Importo acquisti boutique EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_GBP__c</fullName>
        <label>Importo acquisti boutique GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_HKD__c</fullName>
        <label>Importo acquisti boutique HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_JPY__c</fullName>
        <label>Importo acquisti boutique JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_MOP__c</fullName>
        <label>Importo acquisti boutique MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique_USD__c</fullName>
        <label>Importo acquisti boutique USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_boutique__c</fullName>
        <label>Importo acquisti boutique</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_BRL__c</fullName>
        <label>Importo acquisti ultima stagione BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_CAD__c</fullName>
        <label>Importo acquisti ultima stagione CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_CHF__c</fullName>
        <label>Importo acquisti ultima stagione CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_CNY__c</fullName>
        <label>Importo acquisti ultima stagione CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_EUR__c</fullName>
        <label>Importo acquisti ultima stagione EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_E_comm__c</fullName>
        <label>Acquisti ultima stagione Ecommerce(sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_GBP__c</fullName>
        <label>Importo acquisti ultima stagione GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_HKD__c</fullName>
        <label>Importo acquisti ultima stagione HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_JPY__c</fullName>
        <label>Importo acquisti ultima stagione JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_MOP__c</fullName>
        <label>Importo acquisti ultima stagione MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>